// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="c0"
>
  <textarea
    aria-label="Markdown"
    className="c1"
    onChange={[MockFunction]}
    onClick={[Function]}
    onDrop={[Function]}
    onKeyUp={[Function]}
    placeholder="Write markdown here"
    value="Test"
  />
</div>
`;

exports[`renders correctly with disabled and isLoading 1`] = `
<div
  className="c0"
>
  <textarea
    aria-label="Markdown"
    className="c1"
    disabled={true}
    onChange={[MockFunction]}
    onClick={[Function]}
    onDrop={[Function]}
    onKeyUp={[Function]}
    placeholder="Write markdown here"
    value="Test"
  />
  <div
    className="c2"
  />
</div>
`;
